--- a/src/start.yml
+++ b/src/start.yml
@@ -1,7 +1,7 @@
 ---
 title: "Startup Business Primer"
 author: "By Joel Parker Henderson"
-date: "2023-06-02"
+date: "Version 1.2.0"
 subtitle: "Strategy • Tactics • Concepts • Inspirations"
 titlepage: true
 titlepage-color: "FFFFFF"
