Rename from primer to guide

--- a/src/start.yml
+++ b/src/start.yml
@@ -1,5 +1,5 @@
 ---
-title: "Startup Business Primer"
+title: "Startup Business Guide"
 author: "By Joel Parker Henderson"
 date: "Version 1.2.0"
 subtitle: "Strategy • Tactics • Concepts • Inspirations"
