--- a/src/kindle.yml
+++ b/src/kindle.yml
@@ -7,14 +7,14 @@ summary: >
   and sectors, roles and responsibilities, sales and marketing, and venture
   capital (VC).
 categories:
-  - 
-  - 
-  - 
+  - Kindle Books / Business & Money / Business Development & Entrepreneurship / Entrepreneurship / Startups
+  - Kindle Books / Business & Money / Technology / Innovation
+  - Kindle Books / Business & Money / Management & Leadership / Leadership 
 keywords:
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
-  - 
+  - pitch deck
+  - minimum viable product
+  - product market fit
+  - strategy
+  - innovation
+  - leadership
+  - venture capital
