--- a/src/pdf/start.yml
+++ b/src/pdf/start.yml
@@ -3,12 +3,13 @@ title: "Startup Business Guide"
 author: "By Joel Parker Henderson"
 date: "Version 1.2.0"
 subtitle: "Strategy • Tactics • Concepts • Inspirations"
-titlepage: true
-titlepage-color: "FFFFFF"
-titlepage-text-color: "000000"
-titlepage-rule-color: "CCCCCC"
-titlepage-rule-height: 4
-logo: "files/logo.png"
+description: >
+  Topics such as entrepreneurship, pitch decks, market/customer/product
+  discovery, product-market fit (PMF), minimum viable product (MVP), industries
+  and sectors, roles and responsibilities, sales and marketing, and venture
+  capital (VC).
+cover-image: "../../README.jpg"
+logo: "../README.jpg"
 logo-width: 100
 page-background:
 page-background-opacity:
@@ -25,5 +26,5 @@ footer-left: "© Joel Parker Henderson"
 footer-center: "License: CC-BY-NC-SA-4.0"
 footer-right:
 subparagraph: true
-lang: en-US
+lang: "en-US"
 ---
